crates/slopty-proto/tests/snapshots/golden_drag__golden_drag__client_clip_data_drag.snap
---
source: crates/slopty-proto/tests/golden_drag.rs
assertion_line: 31
expression: hex(&bytes)
---
1c 00 00 00 0a 03 01 10 00 00 00 00 00 00 00 00
00 00 00 00 00 00 d7 a6 03 00 01 04 89 50 4e 47
