crates/slopty-proto/tests/snapshots/golden_drag__golden_drag__client_screen_drag_enter.snap
---
source: crates/slopty-proto/tests/golden_drag.rs
expression: hex(&bytes)
---
94 00 00 00 04 04 03 0e 00 10 00 00 00 00 00 00
00 00 00 00 00 00 00 00 d7 a6 00 20 20 44 00 00
b4 43 03 04 01 09 6e 6f 74 65 73 2e 74 78 74 0c
00 a4 03 80 d0 95 ff bc 31 00 00 00 01 06 70 68
6f 74 6f 73 80 80 40 01 ed 03 80 d0 95 ff bc 31
00 00 00 00 01 0b 70 75 62 6c 69 63 2e 6a 70 65
67 00 00 00 02 00 01 01 80 80 80 01 00 00 00 05
01 03 01 02 02 02 02 02 02 02 02 02 02 02 02 02
02 02 02 02 02 02 02 02 02 02 02 02 02 02 02 02
02 02 02 01 03 66 6f 78
