crates/slopty-proto/tests/snapshots/golden_drag__golden_drag__client_screen_drag_leave.snap
---
source: crates/slopty-proto/tests/golden_drag.rs
expression: hex(&bytes)
---
16 00 00 00 04 04 03 0e 02 10 00 00 00 00 00 00
00 00 00 00 00 00 00 00 d7 a6
