crates/slopty-proto/tests/snapshots/golden_drag__golden_drag__client_screen_drag_move.snap
---
source: crates/slopty-proto/tests/golden_drag.rs
expression: hex(&bytes)
---
1e 00 00 00 04 04 03 0e 01 10 00 00 00 00 00 00
00 00 00 00 00 00 00 00 d7 a6 00 00 2f 44 00 00
44 41
