crates/slopty-proto/tests/snapshots/golden_drag__golden_drag__client_xfer_begin_drag.snap
---
source: crates/slopty-proto/tests/golden_drag.rs
assertion_line: 31
expression: hex(&bytes)
---
2a 00 00 00 0c 00 10 00 00 00 00 00 00 00 00 00
00 00 00 00 00 00 09 01 04 10 00 00 00 00 00 00
00 00 00 00 00 00 00 00 d7 a6 03 80 80 40
