crates/slopty-proto/tests/snapshots/golden_drag__golden_drag__uni_bulk_drag_rep.snap
---
source: crates/slopty-proto/tests/golden_drag.rs
expression: hex(&bytes)
---
31 00 00 00 01 10 00 00 00 00 00 00 00 00 00 00
00 00 00 00 00 09 02 01 10 00 00 00 00 00 00 00
00 00 00 00 00 00 00 d7 a6 03 00 01 00 80 80 80
01 00 80 03 00
