crates/slopty-proto/tests/snapshots/golden_drag__golden_drag__worker_screen_drag_ended.snap
---
source: crates/slopty-proto/tests/golden_drag.rs
expression: hex(&bytes)
---
17 00 00 00 05 09 03 01 10 00 00 00 00 00 00 00
00 00 00 00 00 00 00 d7 a6 01 00
