crates/slopty-proto/tests/snapshots/golden_drag__golden_drag__worker_screen_drag_ended_refused.snap
---
source: crates/slopty-proto/tests/golden_drag.rs
expression: hex(&bytes)
---
3c 00 00 00 05 09 03 01 10 00 00 00 00 00 00 00
00 00 00 00 00 00 00 d7 a6 00 01 24 61 6e 6f 74
68 65 72 20 64 72 61 67 20 69 73 20 63 72 6f 73
73 69 6e 67 20 74 68 69 73 20 77 6f 72 6b 65 72
