crates/slopty-proto/tests/snapshots/golden_drag__golden_drag__worker_screen_drag_operation.snap
---
source: crates/slopty-proto/tests/golden_drag.rs
expression: hex(&bytes)
---
16 00 00 00 05 09 03 00 10 00 00 00 00 00 00 00
00 00 00 00 00 00 00 d7 a6 01
