crates/slopty-proto/tests/snapshots/golden_drag__golden_drag__worker_screen_drag_out_began.snap
---
source: crates/slopty-proto/tests/golden_drag.rs
expression: hex(&bytes)
---
5a 00 00 00 05 09 03 02 10 00 00 00 00 00 00 00
00 00 00 00 00 00 00 d7 a6 02 01 0a 72 65 70 6f
72 74 2e 70 64 66 80 20 00 a4 03 80 d0 95 ff bc
31 01 1b 2f 55 73 65 72 73 2f 63 2f 44 65 73 6b
74 6f 70 2f 72 65 70 6f 72 74 2e 70 64 66 00 00
00 01 0a 70 75 62 6c 69 63 2e 70 6e 67 00
